@@ -3,6 +3,12 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
   * userlist: New plugin, lets admins see a list of users and their info.
   * aggregate: Improve checking for too long aggregated filenames.
   * Updated to jQuery 1.6.1.
+  * attachment: Speed up multiple file uploads by storing uploaded files
+    in a staging area until the page is saved/previewed, rather than
+    refreshing the site after each upload.
+  * attachment: Files can be dragged into the edit page to upload them.
+    Multiple file upload support. Upload progress bars.
+    Impemented using the jQuery-File-Upload widget.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
